added async as dependency

--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
   "homepage": "https://github.com/darragh-hayes/progress-exercises",
   "dependencies": {
     "seneca": "^0.9.3",
-    "seneca-mongo-store": "darragh-hayes/seneca-mongo-store"
+    "seneca-mongo-store": "darragh-hayes/seneca-mongo-store",
+    "async": "^1.5.2"
   },
   "devDependencies": {
-    "async": "^1.5.2"
   }
 }
